--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <!--  for company name and description -->
           <div class="footer-items">
             <h1>Chasing Africa 2021</h1>
-            <p>Description of any product or motto of the company.</p>
+            <p>You can find us on the contacts</p>
           </div>
        
       <!--  for quick links  -->
@@ -117,10 +117,10 @@
             <h3>Quick Links</h3>
             <div class="border1"></div> <!--for the underline -->
               <ul>
-                <a href="#"><li>Home</li></a>
+                <a href="../index.html"><li>Home</li></a>
                 <a href="#"><li>Our Services</li></a>
                 <a href="#"><li>Contact</li></a>
-                <a href="#"><li>About</li></a>
+                <a href="../about/index.html"><li>About</li></a>
               </ul>
           </div>
        
