--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       <div class="topnav" id="myTopnav">
             
 
-        <a href="#home" class="active">Home</a>
+        <a href="../index.html" class="active">Home</a>
         <a href="#bodys">Our Services</a>
         <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="../about/index.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
