--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,7 @@
     
             <a href="../index.html" class="active">Home</a>
             <a href="../index.html">Our Services</a>
-            <a href="#contact">Contact</a>
+            <a href="../contact/index.html">Contact</a>
             <a href="../about/index.html">About</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -59,10 +59,10 @@
                       <h2> We are....</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi libero voluptas ullam illum tenetur eveniet, ratione nam qui iste cumque ab. Ipsam officia quas, exercitationem quos aspernatur temporibus! Ea, dignissimos?</p>
                     </div>
-                    <div class="text">
+                    <!-- <div class="text">
                       <h2> WE will....</h2>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate labore sapiente ad est pariatur quos. Sit quisquam labore hic, minima animi reprehenderit accusantium repellat eveniet vel, natus ipsum doloremque id.</p>
-                    </div>
+                    </div> -->
 
                   </div>
                   
