--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <a href="../index.html" class="active">Home</a>
         <a href="#bodys">Our Services</a>
-        <a href="#contact">Contact</a>
+        <a href="../contact/index.html">Contact</a>
         <a href="../about/index.html">About</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
