--- a/about/index.html
+++ b/about/index.html
@@ -165,10 +165,10 @@
                 <h3>Quick Links</h3>
                 <div class="border1"></div> <!--for the underline -->
                   <ul>
-                    <a href="#"><li>Home</li></a>
-                    <a href="#"><li>Our Services</li></a>
-                    <a href="#"><li>Contact</li></a>
-                    <a href="#"><li>About</li></a>
+                    <a href="../index.html"><li>Home</li></a>
+                    <a href="#bodys"><li>Our Services</li></a>
+                    <a href="../contact/index.html"><li>Contact</li></a>
+                    <a href="../about/index.html"><li>About</li></a>
                   </ul>
               </div>
            
