--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
       <div class="container">
         <h3>Contact Us</h3>
         <p>
-          Please send any comments, questions, or feedback with the form below.
+          Please send Us any comments, questions, or feedback with the form below.
         </p>
         <form action="https://formspree.io/f/mrgrjgag" method="POST">
           
