--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be Phenomenal</title>
+    <title>Chasing Africa 2021</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -17,7 +17,7 @@
 
     <div id="header">
       <div class="logo">
-        <h2>Chasing Africa 2021</h2>
+        <h2>CHASING AFRICA 2021</h2>
 
       </div>
 
@@ -54,36 +54,40 @@
      <div class="container">
       <div class="section">
         <h2>African Safari</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
+        <p>An adventure tour that spends some time in nature looking at animals and birdsan exciting and adventurous way of seeing the ‘real Africa’ because it enables you to view a variety of wildlife in their natural habitat. As a result, going on a safari gives you an authentic experience of Africa.
+        Specialist forms of safaris cater for a variety of needs and budgets. Some examples include migratory safaris, birding, medical safaris, hiking, culinary, family, horse back and photographic safaris. A safari tour can range is length from a couple of days to longer overland trips. While the longer safari tours traverse over numerous countries and include 1-2 months of travel.
         </p>
       </div>
 
       <div class="section">
         <h2>HoneyMoon Expeditions</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
+        <p>Choosing your dream destination isn’t even the half of it. Now you have to make up your mind about what you both want to do when you’re there.From soaking up a classic African Safari or watching wildlife wonders in other parts of the world, to stargazing in a middle-eastern desert or sailing from island to sun-dappled island in Croatia or Thailand, we’ve got all these activity suggestions and much more
+          Whether it’s your first trip as a married couple, or you’re after a romantic trip after celebrating renewing your vows, flying away to spend some quality tome together is a great way to strengthen any relationship.
         </p>
       </div>
       <div class="section">
         <h2>Cooperate Events</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
+        <p>Whether hosting a conference or a golf tournament, companies use corporate events to bring people together to develop interpersonal relationships that couldn't exist inside the structured environment of the office.
+          A business will use corporate events to help build professional relationships between employees which will benefit staff communication to make a business expand.
+
+          Corporate events can be used by businesses of all sizes to solicit new business, create a corporate or brand image, and retain and build loyalty with existing suppliers and customers. They can also be used
+          effectively to elicit suppliers and customers. They can furthermore be used effectively to elicit peak performance from employees and produce camaraderie and teamwork among co-workers.
         </p>
       </div>
       <div class="section">
         <h2>Weekend Get-aways</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
+        <p>Whether you need to recharge after a stressful year, blow off some steam, or just unwind, nothing hits the spot quite like a friends weekend (aka the crème de la crème of mini-vacations). Leave your kids, significant others, and responsibilities behind because a weekend getaway is all about carefree fun. What's more, since there are so many fabulous weekend getaways in Kenya, you don't have to travel far—unless you want to, of course.
+
+          Jet off to a bucket-list seaside destination and stay at one of these awesome beach house rentals. Discover the untouched beauty of a national park. Shack up at a cozy cabin in the mountains. Explore a little town not far from home. Seek out cosmopolitan escapades in the big city. Or embrace the whatever-you-want vibe of an all-inclusive resort. Whatever you’re interested in, we’ve got the perfect suggestion for a truly great escape.
         </p>
       </div>
       <div class="section">
         <h2>Bird watching Safari</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
+        <p>Bird watchers are people that spend their days and nights looking at birds and trying to get close enough to them to be able to learn about them. It is no doubt that bird watchers enjoy watching birds that are in the woods or on a field or near their home.
+          However, bird watchers can also be called people that take an interest in the behavior of birds. Many bird watchers actually do have a fascination for all sorts of different birds.
         </p>
       </div>
-      <div class="section">
+      <!-- <div class="section">
         <h2>School Trips</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
@@ -94,7 +98,7 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis vero repellendus sit quisquam a, amet non similique blanditiis dolore iste. Magni, velit! Deleniti ullam nam nostrum omnis optio aliquid est.
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Est nostrum ea, odio, mollitia quidem, aperiam totam ducimus et laudantium reiciendis possimus aliquam tempore libero praesentium aspernatur. Odit ex amet eius?
         </p>
-      </div>
+      </div> -->
      
 
      </div>
@@ -118,8 +122,8 @@
             <div class="border1"></div> <!--for the underline -->
               <ul>
                 <a href="../index.html"><li>Home</li></a>
-                <a href="#"><li>Our Services</li></a>
-                <a href="#"><li>Contact</li></a>
+                <a href="#bodys"><li>Our Services</li></a>
+                <a href="../contact/index.html"><li>Contact</li></a>
                 <a href="../about/index.html"><li>About</li></a>
               </ul>
           </div>
